Fix content projection using ng-template
- Instead of getting the ContentChildren and hooking their content up
into the navigations display the navigation pages provide an ng-template
that is then rendered into the page navigation using ngTemplateOutlet

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,13 @@
 <app-navigation>
   <app-navigation-page>
-    <div #content>Foo</div>
+    <ng-template>
+      <div>Page 1</div>
+    </ng-template>
   </app-navigation-page>
 
   <app-navigation-page>
-    <div #content>Bar</div>
+    <ng-template>
+      <div>Page 2</div>
+    </ng-template>
   </app-navigation-page>
 </app-navigation>
